--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,3 +1,40 @@
+@font-face {
+  font-family: 'Sofia Pro';
+  src: local('Sofia Pro Light'), local('Sofia-Pro-Light'),
+  url('./fonts/SofiaProLight.woff2') format('woff2'),
+  url('./fonts/SofiaProLight.woff') format('woff'),
+  url('./fonts/SofiaProLight.ttf') format('truetype');
+  font-weight: 200;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Sofia Pro';
+  src: local('Sofia Pro Regular'), local('Sofia-Pro-Regular'),
+  url('./fonts/SofiaProRegular.woff2') format('woff2'),
+  url('./fonts/SofiaProRegular.woff') format('woff'),
+  url('./fonts/SofiaProRegular.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Sofia Pro';
+  src: local('Sofia Pro Semi Bold'), local('Sofia-Pro-Semi-Bold'),
+  url('./fonts/SofiaProSemiBold.woff2') format('woff2'),
+  url('./fonts/SofiaProSemiBold.woff') format('woff'),
+  url('./fonts/SofiaProSemiBold.ttf') format('truetype');
+  font-weight: 600;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Sofia Pro';
+  src: local('Sofia Pro Bold'), local('Sofia-Pro-Bold'),
+  url('./fonts/SofiaProBold.woff2') format('woff2'),
+  url('./fonts/SofiaProBold.woff') format('woff'),
+  url('./fonts/SofiaProBold.ttf') format('truetype');
+  font-weight: 700;
+  font-style: normal;
+}
+
 /* color palette from <https://github.com/vuejs/theme> */
 :root {
   --vt-c-white: #ffffff;
@@ -8,7 +45,7 @@
   --vt-c-black-soft: #222222;
   --vt-c-black-mute: #282828;
 
-  --vt-c-indigo: #2c3e50;
+  --vt-c-indigo: #010101;
 
   --vt-c-divider-light-1: rgba(60, 60, 60, 0.29);
   --vt-c-divider-light-2: rgba(60, 60, 60, 0.12);
@@ -36,20 +73,6 @@
   --section-gap: 160px;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --color-background: var(--vt-c-black);
-    --color-background-soft: var(--vt-c-black-soft);
-    --color-background-mute: var(--vt-c-black-mute);
-
-    --color-border: var(--vt-c-divider-dark-2);
-    --color-border-hover: var(--vt-c-divider-dark-1);
-
-    --color-heading: var(--vt-c-text-dark-1);
-    --color-text: var(--vt-c-text-dark-2);
-  }
-}
-
 *,
 *::before,
 *::after {
@@ -65,8 +88,7 @@ body {
   background: var(--color-background);
   transition: color 0.5s, background-color 0.5s;
   line-height: 1.6;
-  font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
-    Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  font-family: "Sofia Pro", Roboto, 'Helvetica Neue', sans-serif;
   font-size: 15px;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
