--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,35 +1,41 @@
 @import 'base.css';
 
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-
-  font-weight: normal;
+h1 {
+  font-size: 4rem;
+  font-weight: 600;
+  line-height: 5rem;
 }
 
-a,
-.green {
-  text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
-  transition: 0.4s;
+h4 {
+  font-size: 1.5rem;
+  font-weight: 400;
+  line-height: 2rem;
 }
 
-@media (hover: hover) {
-  a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
-  }
+h5 {
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5rem;
 }
 
-@media (min-width: 1024px) {
-  body {
-    display: flex;
-    place-items: center;
-  }
 
-  #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
-  }
+.app-btn {
+  color: #ffffff;
+  background: #111111;
+  border: 1px solid #111111;
+  transition: all .3s;
+  font-size: 16px;
+  font-weight: 400;
+  letter-spacing: 2px;
+  padding: 0.9rem 1.5rem 0.7rem 1.5rem;
+}
+.app-btn.white {
+  color: #111111;
+  background: #ffffff;
+  border: 1px solid #ffffff;
+}
+
+.list-unstyled {
+  padding-left: 0;
+  list-style: none;
 }
