--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -5,6 +5,16 @@ h1 {
   font-weight: 600;
   line-height: 5rem;
 }
+h2 {
+  font-size: 3rem;
+  font-weight: 400;
+  line-height: 4rem;
+}
+h3 {
+  font-size: 2.3rem;
+  font-weight: 400;
+  line-height: 3rem;
+}
 
 h4 {
   font-size: 1.5rem;
@@ -18,6 +28,12 @@ h5 {
   line-height: 1.5rem;
 }
 
+a {
+  text-decoration: none;
+  color: #111111;
+  font-size: 1.1rem;
+}
+
 
 .app-btn {
   color: #ffffff;
@@ -28,14 +44,78 @@ h5 {
   font-weight: 400;
   letter-spacing: 2px;
   padding: 0.9rem 1.5rem 0.7rem 1.5rem;
+  text-decoration: none;
 }
+
+.app-btn:hover, .app-btn:active, .app-btn:focus, .app-btn:visited {
+  background: #915005;
+  border-color: #915005;
+  color: #ffffff;
+}
+
 .app-btn.white {
   color: #111111;
   background: #ffffff;
   border: 1px solid #ffffff;
 }
 
+.app-btn.outline {
+  color: #111111;
+  background: transparent;
+}
+.app-btn.outline:hover, .app-btn.outline:active, .app-btn.outline:focus, .app-btn.outline:visited {
+  color: #ffffff;
+  background: #111111;
+}
+
+.app-btn.outline.white {
+  color: #ffffff;
+  background: transparent;
+}
+.app-btn.outline.white:hover, .app-btn.outline.white:active, .app-btn.outline.white:focus, .app-btn.outline.white:visited {
+  color: #111111;
+  background: #ffffff;
+}
+
 .list-unstyled {
   padding-left: 0;
   list-style: none;
+}
+
+.fontWeight200 {
+  font-weight: 200;
+}
+.fontWeight400 {
+  font-weight: 400;
+}
+.fontWeight600 {
+  font-weight: 600;
+}
+.fontWeight700 {
+  font-weight: 700;
+}
+
+
+
+.backgroundImage {
+  background-repeat: no-repeat;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+
+
+@-webkit-keyframes zoomIn{
+  from {
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    transform: scale(1);
+  }
+  to {
+    -webkit-transform: scale(1.05);
+    -moz-transform: scale(1.05);
+    transform: scale(1.05);
+  }
 }
