--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -37,7 +37,7 @@
 
 /* color palette from <https://github.com/vuejs/theme> */
 :root {
-  --vt-c-white: #ffffff;
+  --vt-c-white: var(--white-color);
   --vt-c-white-soft: #f8f8f8;
   --vt-c-white-mute: #f2f2f2;
 
@@ -71,6 +71,11 @@
   --color-text: var(--vt-c-text-light-1);
 
   --section-gap: 160px;
+
+  /* chocolate factory colors */
+  --primary-color: #111111;
+  --white-color: #ffffff;
+  --brown-color: #915005;
 }
 
 *,
@@ -94,3 +99,12 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+.q-tab__label {
+  font-size: 1.1rem;
+}
+
+.text-primary {
+  color: var(--brown-color) !important;
+}
+
