--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -105,7 +105,6 @@ a {
 .fontWeight700 {
   font-weight: 700;
 }
-
 .backgroundImage {
   background-repeat: no-repeat;
   -webkit-background-size: cover;
@@ -116,7 +115,6 @@ a {
 .text-strike {
   text-decoration: line-through
 }
-
 .fullScreen {
   background-image: url("@/assets/images/parallax2.png");
   background-size: cover;
@@ -125,7 +123,6 @@ a {
   display: flex;
   align-items: center;
 }
-
 .divider {
   border-bottom: 1px solid #e7e7e7;
   padding-bottom: 20px;
@@ -142,4 +139,149 @@ a {
     -moz-transform: scale(1.05);
     transform: scale(1.05);
   }
+}
+
+/* table */
+.table {
+  width: 100%;
+  margin-bottom: 1rem;
+  background-color: transparent;
+}
+
+table {
+  border-collapse: collapse;
+}
+table {
+  width: 100%;
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+.table {
+  border-right: 1px solid #dee2e6;
+  border-left: 1px solid #dee2e6;
+  border-bottom: 1px solid #dee2e6;
+}
+.table td, .table th {
+  padding: 0.75rem;
+  vertical-align: top;
+  border-top: 1px solid #dee2e6;
+}
+.table thead th {
+  vertical-align: bottom;
+  border-bottom: 2px solid #dee2e6;
+}
+
+.table > tbody > tr > td {
+  vertical-align: middle;
+}
+
+.cartView .cart-title th {
+  border-bottom: 0;
+  font-weight: 600;
+  font-size: 14px;
+  letter-spacing: .2em;
+  text-transform: uppercase;
+  color: #111111;
+  padding: 15px 20px;
+  border-left: 1px solid #dee2e6;
+}
+
+.cartView .cart_item .product-name-thumb,
+.cartView .cart_item .product-price,
+.cartView .cart_item .product-subtotal {
+  font-size: 14px;
+  color: #a8a8a8;
+  line-height: 1.6;
+  font-weight: 400;
+}
+
+
+/* quantity btn */
+.js-qty {
+  position: relative;
+  max-width: 100%;
+  min-width: 60px;
+  overflow: visible;
+  display: inline-block;
+  width: 100%;
+  border: 2px solid #ddd;
+  margin-right: 15px;
+}
+
+
+.js-qty-adjust, .js-qty > span {
+  cursor: pointer;
+  position: absolute;
+  display: block;
+  top: 0;
+  bottom: 0;
+  border: 0 none;
+  padding: 8px;
+  background: none;
+  text-align: center;
+  overflow: hidden;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+.js-qty-adjust-minus, .js-qty > span.qtyminus {
+  left: 0;
+}
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+.js-qty input {
+  display: block;
+  background: none;
+  text-align: center;
+  width: 100%;
+  padding: 5px 25px;
+  margin: 0;
+}
+.js-qty input[type=number] {
+  width: calc(100% - 45px);
+  border: none;
+  padding: 10px 0;
+  text-align: center;
+  font-size: 20px;
+  color: #232529;
+  font-weight: 600;
+  border-right: 1px solid #ddd;
+  border-radius: 0;
+}
+
+.js-qty .qty-minus,
+.js-qty .qty-plus {
+  position: absolute;
+  transition: .3s;
+  color: #111111;
+  padding: 0;
+  width: unset;
+  border: 0;
+  font-weight: 600;
+  font-size: 14px;
+}
+
+.js-qty .qty-minus {
+  right: 0;
+  bottom: 0;
+  height: 50%;
+  width: 42px;
+  left: unset;
+  top: unset;
+  border-top: 1px solid #ddd;
+}
+.js-qty .qty-plus {
+  right: 0;
+  height: 50%;
+  top: 0;
+  width: 42px;
+}
+
+.cartView .js-qty {
+  width: 90px;
 }
